--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
       <artifactId>ConfigurationFileLoader</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>MirageObjectLibrary</artifactId>
+      <version>1.0-RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
