Fixed Serialization in Authentication System and other fixes related to authentication

--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,51 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.manuwebdev</groupId>
-  <artifactId>HouseV2</artifactId>
-  <version>2.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.manuwebdev</groupId>
+    <artifactId>HouseV2</artifactId>
+    <version>2.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>HouseV2</name>
-  <url>http://maven.apache.org</url>
+    <name>HouseV2</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <repositories>	
-    <repository>	
-      <id>mgmvn</id>	
-      <url>http://servers.manuwebdev.com:8081/nexus/content/repositories/mgmvn</url>
-    </repository>	
-  </repositories>
+    <repositories>	
+        <repository>	
+            <id>mgmvn</id>	
+            <url>http://servers.manuwebdev.com:8081/nexus/content/repositories/mgmvn</url>
+        </repository>	
+    </repositories>
   
 
   
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.manuwebdev</groupId>
-      <artifactId>ConfigurationFileLoader</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>MirageObjectLibrary</artifactId>
-      <version>1.0-RELEASE</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.18</version>
+            <classifier>bin</classifier>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.manuwebdev</groupId>
+            <artifactId>ConfigurationFileLoader</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>MirageObjectLibrary</artifactId>
+            <version>1.0-RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
