--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.manuwebdev</groupId>
             <artifactId>MirageObjectLibrary</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-RELEASE</version>
         </dependency>
     </dependencies>
 </project>
